# Spotify-Playlist-Retrieval

./: .cache  .gitignore  LICENSE  README.md  Spotify Playlist API.py  genres.json  main.py  music.json  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: tests.yml
